--- a/scripts/Metallicity Evolution.ipynb
+++ b/scripts/Metallicity Evolution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times = np.linspace(0, 14, 50)  # Gyr\n",
+    "bin_width = np.diff(times)[0]  # Gyr\n",
+    "bin_centers = times[1:] - bin_width / 2  # Gyr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,149 +104,68 @@
     "        \"StellarFormationTime_Gyr\": cosmology.expansion_factor_to_time(\n",
     "            s.stellar_formation_time[is_real_star & is_main_obj]),\n",
     "        \"[Fe/H]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
-    "        \"[O/H]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
-    "        \"[O/Fe]\": s.metal_abundance[\"Fe/H\"][is_real_star & is_main_obj],\n",
-    "        \"xPosition_ckpc\": s.pos[is_real_star & is_main_obj, 0],\n",
-    "        \"yPosition_ckpc\": s.pos[is_real_star & is_main_obj, 1],\n",
-    "        \"zPosition_ckpc\": s.pos[is_real_star & is_main_obj, 2],\n",
+    "        \"[O/H]\": s.metal_abundance[\"O/H\"][is_real_star & is_main_obj],\n",
+    "        \"[O/Fe]\": s.metal_abundance[\"O/Fe\"][is_real_star & is_main_obj],\n",
     "        \"ComponentTag\": s.region_tag[is_real_star & is_main_obj],\n",
     "        }\n",
-    "\n",
+    "    \n",
     "    if tag_in_situ:\n",
     "        s.tag_in_situ_stars()\n",
     "        props[\"IsInSitu\"] = s.is_in_situ[is_real_star & is_main_obj]\n",
     "\n",
-    "    return pd.DataFrame(props)"
+    "    df = pd.DataFrame(props)\n",
+    "    df[~np.isfinite(df)] = np.nan\n",
+    "    df.dropna(inplace=True)\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "times = np.linspace(0, 14, 50)  # Gyr\n",
-    "bin_width = np.diff(times)[0]  # Gyr\n",
-    "bin_centers = times[1:] - bin_width / 2  # Gyr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "simulation = \"au6_or_l4_s127\"\n",
-    "galaxy = parse(simulation)[0]\n",
-    "label = f\"Au{galaxy}\"\n",
-    "df = read_data(simulation=simulation)\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
-    "\n",
-    "ax.tick_params(which='both', direction=\"in\")\n",
-    "ax.set_axisbelow(True)\n",
-    "ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
-    "\n",
-    "ax.set_xlim(0, 14)\n",
-    "ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
-    "ax.set_xlabel(\"Stellar Formation Time [Gyr]\")\n",
-    "\n",
-    "ax.set_ylim(-2, 1.5)\n",
-    "ax.set_yticks([-1.5, -1, -0.5, 0, 0.5, 1.0])\n",
-    "ax.set_ylabel(\"[Fe/H]\")\n",
-    "\n",
-    "mean, _, _ = binned_statistic(\n",
-    "    x=df[\"StellarFormationTime_Gyr\"],\n",
-    "    values=df[\"[Fe/H]\"],\n",
-    "    statistic=\"mean\", bins=times)\n",
-    "std, _, _ = binned_statistic(\n",
-    "    x=df[\"StellarFormationTime_Gyr\"],\n",
-    "    values=df[\"[Fe/H]\"],\n",
-    "    statistic=np.nanstd, bins=times)\n",
-    "ax.fill_between(x=bin_centers, y1=mean - std, y2=mean + std,\n",
-    "                color='k', alpha=0.2, lw=0)\n",
-    "ax.plot(bin_centers, mean, c='k', lw=1.0, label=\"Total\", zorder=12)\n",
-    "\n",
-    "for i, component in enumerate(settings.components):\n",
-    "    is_component = df[\"ComponentTag\"] == i\n",
-    "    mean, _, _ = binned_statistic(\n",
-    "        x=df[\"StellarFormationTime_Gyr\"][is_component],\n",
-    "        values=df[\"[Fe/H]\"][is_component],\n",
-    "        statistic=np.nanmean, bins=times)\n",
-    "    std, _, _ = binned_statistic(\n",
-    "        x=df[\"StellarFormationTime_Gyr\"][is_component],\n",
-    "        values=df[\"[Fe/H]\"][is_component],\n",
-    "        statistic=np.nanstd, bins=times)\n",
-    "    ax.fill_between(x=bin_centers, y1=mean - std, y2=mean + std,\n",
-    "                    color=settings.component_colors[component],\n",
-    "                    alpha=0.2, lw=0)\n",
-    "    ax.plot(bin_centers, mean, c=settings.component_colors[component],\n",
-    "            lw=1.0, zorder=12, label=settings.component_labels[component])\n",
-    "\n",
-    "ax.legend(loc=\"lower right\", framealpha=0.0, fontsize=5.0,\n",
-    "            bbox_to_anchor=(0.99, 0.01), ncol=1)\n",
-    "\n",
-    "ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "        size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
-    "\n",
-    "fig.savefig(\n",
-    "    f\"../images/metallicity_evolution/{simulation}{SUFFIX}.pdf\")\n",
-    "plt.close(fig)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = plt.figure(figsize=(7, 8))\n",
-    "gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
-    "axs = gs.subplots(sharex=True, sharey=True)\n",
-    "\n",
-    "for ax in axs.flatten():\n",
-    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
-    "    ax.tick_params(which='both', direction=\"in\")\n",
-    "    if ax == axs[-1, -1]: ax.axis(\"off\")\n",
-    "    ax.set_xlim(0, 14)\n",
-    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
-    "    ax.set_ylim(-2, 1.5)\n",
-    "    ax.set_yticks([-1.5, -1, -0.5, 0, 0.5, 1.0])\n",
-    "    ax.set_axisbelow(True)\n",
-    "    if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
-    "        ax.set_xlabel(r\"$\\tau_\\star$ [Gyr]\")\n",
-    "        ax.tick_params(labelbottom=True)\n",
-    "    if ax.get_subplotspec().is_first_col():\n",
-    "        ax.set_ylabel(\"[Fe/H]\")\n",
-    "\n",
-    "for i, galaxy in enumerate(settings.groups[\"Included\"]):\n",
-    "    ax = axs.flatten()[i]\n",
-    "    simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "def make_plot_for_simulation(simulation: str, of: str, to: str) -> None:\n",
+    "    galaxy = parse(simulation)[0]\n",
     "    label = f\"Au{galaxy}\"\n",
     "    df = read_data(simulation=simulation)\n",
     "\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
+    "\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_axisbelow(True)\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "\n",
+    "    ax.set_xlim(0, 14)\n",
+    "    ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "    ax.set_xlabel(\"Stellar Formation Time [Gyr]\")\n",
+    "\n",
+    "    ax.set_ylim(-2, 1.5)\n",
+    "    ax.set_yticks([-1.5, -1, -0.5, 0, 0.5, 1.0])\n",
+    "    ax.set_ylabel(f\"[{of}/{to}]\")\n",
+    "\n",
     "    mean, _, _ = binned_statistic(\n",
     "        x=df[\"StellarFormationTime_Gyr\"],\n",
-    "        values=df[\"[Fe/H]\"],\n",
+    "        values=df[f\"[{of}/{to}]\"],\n",
     "        statistic=\"mean\", bins=times)\n",
     "    std, _, _ = binned_statistic(\n",
     "        x=df[\"StellarFormationTime_Gyr\"],\n",
-    "        values=df[\"[Fe/H]\"],\n",
+    "        values=df[f\"[{of}/{to}]\"],\n",
     "        statistic=np.nanstd, bins=times)\n",
     "    ax.fill_between(x=bin_centers, y1=mean - std, y2=mean + std,\n",
     "                    color='k', alpha=0.2, lw=0)\n",
-    "    ax.plot(bin_centers, mean, c='k', lw=1.0,\n",
-    "            label=\"Total\", zorder=13, ls=\"--\")\n",
+    "    ax.plot(bin_centers, mean, c='k', lw=1.0, label=\"Total\", zorder=12)\n",
     "\n",
     "    for i, component in enumerate(settings.components):\n",
     "        is_component = df[\"ComponentTag\"] == i\n",
     "        mean, _, _ = binned_statistic(\n",
     "            x=df[\"StellarFormationTime_Gyr\"][is_component],\n",
-    "            values=df[\"[Fe/H]\"][is_component],\n",
+    "            values=df[f\"[{of}/{to}]\"][is_component],\n",
     "            statistic=np.nanmean, bins=times)\n",
     "        std, _, _ = binned_statistic(\n",
     "            x=df[\"StellarFormationTime_Gyr\"][is_component],\n",
-    "            values=df[\"[Fe/H]\"][is_component],\n",
+    "            values=df[f\"[{of}/{to}]\"][is_component],\n",
     "            statistic=np.nanstd, bins=times)\n",
     "        ax.fill_between(x=bin_centers, y1=mean - std, y2=mean + std,\n",
     "                        color=settings.component_colors[component],\n",
@@ -243,20 +173,107 @@
     "        ax.plot(bin_centers, mean, c=settings.component_colors[component],\n",
     "                lw=1.0, zorder=12, label=settings.component_labels[component])\n",
     "\n",
-    "    ax.text(x=0.05, y=0.95,\n",
-    "            s=r\"$\\texttt{\" + label + \"}$\",\n",
-    "            size=6.0, transform=ax.transAxes,\n",
-    "            ha='left', va='top',\n",
-    "            )\n",
+    "    ax.legend(loc=\"lower right\", framealpha=0.0, fontsize=5.0,\n",
+    "                bbox_to_anchor=(0.99, 0.01), ncol=1)\n",
     "\n",
-    "    if galaxy == 10:\n",
-    "        ax.legend(loc=\"lower right\", framealpha=0.0, fontsize=4.0,\n",
-    "                  bbox_to_anchor=(0.99, 0.01), ncol=1)\n",
+    "    ax.text(x=0.05, y=0.95, s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "            size=8.0, transform=ax.transAxes, ha='left', va='top')\n",
     "\n",
     "    fig.savefig(\n",
-    "        f\"../images/metallicity_evolution/included{SUFFIX}.pdf\")\n",
+    "        f\"../images/metallicity_evolution/{simulation}_{of}{to}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_plot_for_sample(of: str, to: str,\n",
+    "                         ylim: tuple,\n",
+    "                         yticks: list) -> None:\n",
+    "    fig = plt.figure(figsize=(7, 8))\n",
+    "    gs = fig.add_gridspec(nrows=6, ncols=4, hspace=0.0, wspace=0.0)\n",
+    "    axs = gs.subplots(sharex=True, sharey=True)\n",
     "\n",
-    "plt.close(fig)"
+    "    for ax in axs.flatten():\n",
+    "        ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "        ax.tick_params(which='both', direction=\"in\")\n",
+    "        if ax == axs[-1, -1]: ax.axis(\"off\")\n",
+    "        ax.set_xlim(0, 14)\n",
+    "        ax.set_xticks([2, 4, 6, 8, 10, 12])\n",
+    "        ax.set_ylim(ylim)\n",
+    "        ax.set_yticks(yticks)\n",
+    "        ax.set_axisbelow(True)\n",
+    "        if ax.get_subplotspec().is_last_row() or ax == axs[-2, -1]:\n",
+    "            ax.set_xlabel(r\"$\\tau_\\star$ [Gyr]\")\n",
+    "            ax.tick_params(labelbottom=True)\n",
+    "        if ax.get_subplotspec().is_first_col():\n",
+    "            ax.set_ylabel(f\"[{of}/{to}]\")\n",
+    "\n",
+    "    for i, galaxy in enumerate(settings.groups[\"Included\"]):\n",
+    "        ax = axs.flatten()[i]\n",
+    "        simulation = f\"au{galaxy}_or_l4_s127\"\n",
+    "        label = f\"Au{galaxy}\"\n",
+    "        df = read_data(simulation=simulation)\n",
+    "\n",
+    "        mean, _, _ = binned_statistic(\n",
+    "            x=df[\"StellarFormationTime_Gyr\"],\n",
+    "            values=df[f\"[{of}/{to}]\"],\n",
+    "            statistic=\"mean\", bins=times)\n",
+    "        std, _, _ = binned_statistic(\n",
+    "            x=df[\"StellarFormationTime_Gyr\"],\n",
+    "            values=df[f\"[{of}/{to}]\"],\n",
+    "            statistic=np.nanstd, bins=times)\n",
+    "        ax.fill_between(x=bin_centers, y1=mean - std, y2=mean + std,\n",
+    "                        color='k', alpha=0.2, lw=0)\n",
+    "        ax.plot(bin_centers, mean, c='k', lw=1.0,\n",
+    "                label=\"Total\", zorder=13, ls=\"--\")\n",
+    "\n",
+    "        for i, component in enumerate(settings.components):\n",
+    "            is_component = df[\"ComponentTag\"] == i\n",
+    "            mean, _, _ = binned_statistic(\n",
+    "                x=df[\"StellarFormationTime_Gyr\"][is_component],\n",
+    "                values=df[f\"[{of}/{to}]\"][is_component],\n",
+    "                statistic=np.nanmean, bins=times)\n",
+    "            std, _, _ = binned_statistic(\n",
+    "                x=df[\"StellarFormationTime_Gyr\"][is_component],\n",
+    "                values=df[f\"[{of}/{to}]\"][is_component],\n",
+    "                statistic=np.nanstd, bins=times)\n",
+    "            ax.fill_between(x=bin_centers, y1=mean - std, y2=mean + std,\n",
+    "                            color=settings.component_colors[component],\n",
+    "                            alpha=0.2, lw=0)\n",
+    "            ax.plot(bin_centers, mean, c=settings.component_colors[component],\n",
+    "                    lw=1.0, zorder=12, label=settings.component_labels[component])\n",
+    "\n",
+    "        ax.text(x=0.05, y=0.95,\n",
+    "                s=r\"$\\texttt{\" + label + \"}$\",\n",
+    "                size=6.0, transform=ax.transAxes,\n",
+    "                ha='left', va='top',\n",
+    "                )\n",
+    "\n",
+    "        if galaxy == 10:\n",
+    "            ax.legend(loc=\"best\", framealpha=0.0, fontsize=4.0)\n",
+    "\n",
+    "        fig.savefig(\n",
+    "            f\"../images/metallicity_evolution/included_{of}{to}{SUFFIX}.pdf\")\n",
+    "\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "make_plot_for_sample(of=\"Fe\", to='H',\n",
+    "                     ylim=(-2, 1.5), yticks=[-1.5, -1, -0.5, 0, 0.5, 1.0])\n",
+    "make_plot_for_sample(of='O', to='H',\n",
+    "                     ylim=(-2, 1.5), yticks=[-1.5, -1, -0.5, 0, 0.5, 1.0])\n",
+    "# make_plot_for_sample(of='O', to=\"Fe\",\n",
+    "#                      ylim=(0, 0.8), yticks=[0.2, 0.4, 0.6])"
    ]
   }
  ],
