--- a/scripts/FeH Metallicity Distribution.ipynb
+++ b/scripts/FeH Metallicity Distribution.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_BINS: int = 40"
+    "N_BINS: int = 50"
    ]
   },
   {
@@ -84,15 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SAMPLE = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +193,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_distribution_for_galaxy(\n",
+    "    simulation: str, of: str, to: str,\n",
+    "    xlim: tuple, ylim: tuple, xticks: list) -> None:\n",
+    "\n",
+    "    galaxy = parse(simulation)[0]\n",
+    "    df = read_data(simulation=simulation, of=of, to=to, tag_in_situ=True)\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(2.5, 2.5))\n",
+    "\n",
+    "    ax.tick_params(which='both', direction=\"in\")\n",
+    "    ax.set_xlim(xlim)\n",
+    "    ax.set_ylim(ylim)\n",
+    "    ax.set_xticks(xticks)\n",
+    "    ax.set_xlabel(f'[{of}/{to}]')\n",
+    "    ax.set_ylabel(\"PDF\")\n",
+    "    ax.grid(True, ls='-', lw=0.25, c=\"gainsboro\")\n",
+    "\n",
+    "    for idx, component in enumerate(settings.components):\n",
+    "        is_region = (df[\"RegionTag\"] == idx)\n",
+    "        is_finite = np.isfinite(df[f\"[{of}/{to}]\"])\n",
+    "\n",
+    "        pdf = gaussian_kde(df[f\"[{of}/{to}]\"][is_region & is_finite].to_numpy(\n",
+    "            dtype=np.float64))\n",
+    "        pdf_x = np.linspace(xlim[0], xlim[1], 100)\n",
+    "        pdf_y = pdf(pdf_x)\n",
+    "        ax.plot(pdf_x, pdf_y, lw=1.0,\n",
+    "            color=settings.component_colors[component],\n",
+    "            label=settings.component_labels[component],\n",
+    "            zorder=15)\n",
+    "\n",
+    "    ax.legend(loc=\"upper left\", framealpha=0, fontsize=6)\n",
+    "\n",
+    "    ax.text(\n",
+    "        x=0.95, y=0.95, size=8.0,\n",
+    "        s=r\"$\\texttt{\" + f\"Au{galaxy}\" + \"}$\",\n",
+    "        ha='right', va='top', transform=ax.transAxes)\n",
+    "\n",
+    "    fig.savefig(\n",
+    "        f\"../images/metal_abundance_distribution/{of}_{to}/\"\n",
+    "        f\"{simulation}{SUFFIX}.pdf\")\n",
+    "    plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,20 +307,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for simulation in [\"au6_or_l4_s127\"]:\n",
-    "    plot_distribution_for_galaxy_with_stellar_origin(\n",
-    "        simulation, of=\"Fe\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2),\n",
-    "        xticks=[-2, -1, 0, 1])\n",
-    "    plot_distribution_for_galaxy_with_stellar_origin(\n",
-    "        simulation, of=\"O\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2),\n",
-    "        xticks=[-2, -1, 0, 1])\n",
-    "    plot_distribution_for_galaxy_with_stellar_origin(\n",
-    "        simulation, of=\"O\", to='Fe', xlim=(-0.3, 0.8), ylim=(0, 0.6),\n",
-    "        xticks=[-0.2, 0, 0.2, 0.4, 0.6])"
+    "# Plots for galaxy without stellar origin\n",
+    "simulation = \"au6_or_l4_s127\"\n",
+    "\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"Fe\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"O\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"O\", to='Fe', xlim=(0.0, 0.5), ylim=(0, 20),\n",
+    "    xticks=[0.1, 0.2, 0.3, 0.4])\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"Si\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])\n",
+    "plot_distribution_for_galaxy(simulation,\n",
+    "    of=\"Mg\", to='H', xlim=(-3, 1.5), ylim=(0, 2), xticks=[-2, -1, 0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plots for galaxy with stellar origin\n",
+    "simulation = \"au6_or_l4_s127\"\n",
+    "\n",
+    "plot_distribution_for_galaxy_with_stellar_origin(simulation,\n",
+    "    of=\"Fe\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2), xticks=[-2, -1, 0, 1])\n",
+    "plot_distribution_for_galaxy_with_stellar_origin(simulation,\n",
+    "    of=\"O\", to='H', xlim=(-3, 1.5), ylim=(0, 0.2), xticks=[-2, -1, 0, 1])\n",
+    "plot_distribution_for_galaxy_with_stellar_origin(simulation,\n",
+    "    of=\"O\", to='Fe', xlim=(0.0, 0.5), ylim=(0, 0.2),\n",
+    "    xticks=[0.1, 0.2, 0.3, 0.4])"
    ]
   },
   {
@@ -289,21 +351,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot for the sample of galaxies\n",
+    "sample = [f\"au{i}_or_l4_s127\" for i in settings.groups[\"Included\"]]\n",
+    "\n",
     "plot_distribution_for_sample(\n",
-    "    SAMPLE, of='O', to=\"Fe\",\n",
-    "    xlim=(0, 0.5), ylim=(0, 20),\n",
-    "    xticks=[0.1, 0.2, 0.3, 0.4], yticks=[0, 5, 10, 15])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    SAMPLE, of='O', to=\"Fe\", xlim=(0, 0.5), ylim=(0, 20),\n",
+    "    xticks=[0.1, 0.2, 0.3, 0.4], yticks=[0, 5, 10, 15])\n",
     "plot_distribution_for_sample(\n",
-    "    SAMPLE, of=\"Fe\", to='H',\n",
-    "    xlim=(-2, 2), ylim=(0, 2.5),\n",
+    "    SAMPLE, of=\"Fe\", to='H', xlim=(-2, 2), ylim=(0, 2.5),\n",
     "    xticks=[-1, 0, 1], yticks=[0, 0.5, 1, 1.5, 2])"
    ]
   }
